# ui

./: CMakeLists.txt  Makefile  elements.cpp  elements.hpp  event.cpp  event.hpp  game.cpp  game.h  main.cpp  renderer.cpp  timer.cpp  timer.h  ui.cpp  ui.hpp  uiSdl.cpp  uiSdl.hpp  vector2.cpp  vector2.h
scripts/: formatcode.sh
src/: event.cpp  event.hpp  rectangle.hpp  renderer.cpp  renderer.hpp  ui.hpp  uiSdl.cpp  uiSdl.hpp
src/elements/: window.cpp
ui/: elements.cpp  elements.hpp  event.cpp  event.hpp  renderer.cpp  renderer.hpp  ui.cpp  ui.hpp  uiSdl.cpp  uiSdl.hpp
ui/elements/: rect.cpp  rect.hpp  window.cpp  window.hpp
